@@ -23,9 +23,10 @@
         android:versionName="2014.04.10a"
         android:installLocation="auto">
 
-    <!-- Minimum Android version 2.1 (7), targeted version 4.3 (18). -->
+    <!-- Minimum Android version 2.1 (7), targeted version 4.4 (19). -->
+    <!-- For TUTORIAL, minimum is version 4.0 (14). -->
     <uses-sdk android:minSdkVersion="7"
-              android:targetSdkVersion="18"/>
+              android:targetSdkVersion="19"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <supports-screens android:resizeable="true"
                   android:smallScreens="true"
