@@ -18,6 +18,6 @@ android.library.reference.1=../../ActionBarSherlock/actionbarsherlock
 android.library.reference.2=../../android-menudrawer/menudrawer
 android.library.reference.3=../../StandOut/library
 
-# TUTORIAL
+# TUTORIAL - for API 14+
 # android.library.reference.4=../../../opt/android-sdk-linux_86/extras/google/google_play_services/libproject/google-play-services_lib
 # android.library.reference.5=../../ShowcaseView/library
